--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "server": "webpack-dev-server",
-    "start": "npm run dev && npm run server"
+    "start": "npm run dev && npm run server",
+    "start:prod": "npm run dev && npm run server"
   },
   "author": "Alberto Mateos Checa",
   "dependencies": {
